button to change color

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,8 +20,8 @@
     </header>
 
     <main class="main">
+      <button class="darkMode darkMode--js">Zmień tryb</button>
       <header class="main__header" id="top">
-        
         <p>Właśnie mamy <span class="time--js"></span></p>
         <button class="action--js">Kliknij</button>
       </header>
