add button change color on pages

--- a/src/pages/css.html
+++ b/src/pages/css.html
@@ -18,6 +18,7 @@
       </nav>
       <button class="hamburger hamburger--js">Menu</button>
     </header>
+    <button class="darkMode darkMode--js">Zmień tryb</button>
 
     <main class="main">
       <header class="main__header" id="top">
