new week and animation

--- a/src/pages/css.html
+++ b/src/pages/css.html
@@ -32,7 +32,7 @@
         <div class="grid">
         <article class="week-summary">
           <h3 class="week-summary__title">Tydzień II</h3>
-          <ol>
+          <ul>
             <li>
           <p class="week-summary__description">
             <a class="week-summary__link" href="https://www.w3.org/TR/CSS/"
@@ -43,13 +43,13 @@
             <a class="week-summary__link" href="https://coolors.co/"
               >Coolors</a
             >
-          </li></ol>
+          </li></ul>
           </p>
         </article>
 
         <article class="week-summary">
           <h3 class="week-summary__title">Tydzień V</h3>
-          <ol><li>
+          <ul><li>
           <p class="week-summary__description">
             <a
               class="week-summary__link"
@@ -71,7 +71,7 @@
                       >CSS Gradient</a
                     ></li>
             
-          </ol>
+          </ul>
           </p>
         </article>
 
@@ -93,7 +93,8 @@
           <li>
             <p class="week-summary__description">
               <a class="week-summary__link" href="https://css-tricks.com/snippets/css/complete-guide-grid/"
-                >Grid</a>
+                >Grid</a> </li>
+                <li>
                 <p class="week-summary__description">
                   <a class="week-summary__link" href="https://css-tricks.com/understanding-flex-grow-flex-shrink-and-flex-basis/"
                     >Flexbox</a>
@@ -106,10 +107,51 @@
         <ul>
           <li>
             <p class="week-summary__description">
-              <a class="week-summary__link" href="https://fonts.google.com/" >Google fonts</a>
+              <a class="week-summary__link" href="https://autoprefixer.github.io/">Autoprefixer</a>
                 
           </li>
         </ul></p>
+      </article>
+
+      <article class="week-summary">
+        <h3 class="week-summary__title">Tydzień X</h3>
+        <ul>
+          <li>
+            <p class="week-summary__description">
+              <a class="week-summary__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animated_properties">Animatable CSS properties</a>     
+          </li>
+          <li>
+          <p class="week-summary__description">
+            <a class="week-summary__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/transition-timing-function"
+              >Transition</a
+            ></p></li>
+            <li>
+            <p class="week-summary__description">
+              <a class="week-summary__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/transform"
+                >Transform</a
+              ></p></li>
+              <li>
+              <p class="week-summary__description">
+                <a class="week-summary__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/animation"
+                  >Animation</a
+                ></p></li>
+                <li>
+                  <p class="week-summary__description">
+                    <a class="week-summary__link" href="https://ogp.me/"
+                      >OpenGraph protocol</a
+                    ></li></p>
+                    <li>
+                      <p class="week-summary__description">
+                        <a class="week-summary__link" href="https://www.canva.com/"
+                          >Canva - strona do szablonów</a
+                        ></li></p>
+                        <li>
+                          <p class="week-summary__description">
+                            <a class="week-summary__link" href="https://developers.facebook.com/tools/debug/"
+                              >Strona do sprawdzania szablonu</a
+                            ></li></p>
+
+        </ul>
       </article>
 
     </div>
