fetch repository github

--- a/src/pages/css.html
+++ b/src/pages/css.html
@@ -154,6 +154,27 @@
         </ul>
       </article>
 
+      <article class="week-summary">
+        <h3 class="week-summary__title">Tydzień XI</h3>
+        <ul>
+          <li>
+            <p class="week-summary__description">
+              <a class="week-summary__link" href="https://web.dev/">Test strony</a></p>  
+          </li>
+          <li>
+            <p class="week-summary__description">
+              <a class="week-summary__link" href="https://tinypng.com/">Zmniejszanie wielkości zdjęć</a></p>  
+          </li>
+          <li>
+            <p class="week-summary__description">
+              <a class="week-summary__link" href="https://web.dev/extract-critical-css/">Critical css</a></p>  
+          </li>
+          
+        </ul>
+      </article>
+
+
+
     </div>
       </section>
     </main>
