--- a/src/pages/html.html
+++ b/src/pages/html.html
@@ -175,6 +175,19 @@
           </p>
         </article>
 
+
+        <article class="week-summary">
+          <h3 class="week-summary__title">Tydzień XI</h3>
+          <p class="week-summary__description">
+            <ol>
+              <li><a class="week-summary__link" href="https://docs.github.com/en/rest" >Dokumentacja GitHuba</a></li>
+              <li><a class="week-summary__link" href="https://www.browserstack.com/" >BrowserStack</a></li>
+              <li><a class="week-summary__link" href="https://developer.microsoft.com/en-us/microsoft-edge/tools/vms/" >Virtual Machines</a></li>
+              <li><a class="week-summary__link" href="https://gs.statcounter.com/" >Statcounter</a></li> 
+            </ol>
+          </p>
+        </article>
+
       </div>
       
       </section>
