--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -384,6 +384,24 @@
 
             <p></p>
           </article>
+
+          <article class="week-summary">
+            <h3 class="week-summary__title">Tydzien XII</h3>
+            <p class="week-summary__description"></p>
+            <p class="week-summary__paragraph">
+              1.HTML: multimedia i zewnętrzne zasoby
+            </p>
+            <p class="week-summary__paragraph">2.Licencje, grafiki, materiały</p>
+            <p class="week-summary__paragraph">
+              3.CSS: ~ + › []
+            </p>
+            <p class="week-summary__paragraph">
+              4.Projekt od A do ...
+            </p>
+
+            <p></p>
+          </article>
+
         </div>
       </section>
 
