--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -402,6 +402,23 @@
             <p></p>
           </article>
 
+          <article class="week-summary">
+            <h3 class="week-summary__title">Tydzien XII</h3>
+            <p class="week-summary__description"></p>
+            <p class="week-summary__paragraph">
+              1.Pierwsza praca
+            </p>
+            <p class="week-summary__paragraph">2.Jak wygląda rozmowa kwalifikacyjna?</p>
+            <p class="week-summary__paragraph">
+              3.Jak przygotować swoje CV?
+            </p>
+            <p class="week-summary__paragraph">
+              Przyszłość frontendu
+            </p>
+
+            <p></p>
+          </article>
+
         </div>
       </section>
 
