--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -403,7 +403,7 @@
           </article>
 
           <article class="week-summary">
-            <h3 class="week-summary__title">Tydzien XII</h3>
+            <h3 class="week-summary__title">Tydzien XIII</h3>
             <p class="week-summary__description"></p>
             <p class="week-summary__paragraph">
               1.Pierwsza praca
