--- a/src/pages/html.html
+++ b/src/pages/html.html
@@ -188,6 +188,17 @@
           </p>
         </article>
 
+        <article class="week-summary">
+          <h3 class="week-summary__title">Tydzień XII</h3>
+          <p class="week-summary__description">
+            <ol>
+              <li><a class="week-summary__link" href="https://docs.github.com/en/github/working-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site" >Configuring a publishing source</a></li>
+              <li><a class="week-summary__link" href="https://search.creativecommons.org/search?q=as/" >CC search</a></li>
+              
+            </ol>
+          </p>
+        </article>
+
       </div>
       
       </section>
